tempo/virtualservices/tempo-distributor-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tempo-distributor-vs
  namespace: observability
spec:
  hosts:
    - testing-consumer-app.thirdwavecoffee.in
  gateways:
    - istio-system/testing-api-gateway
  http:
    - match:
        - uri:
            prefix: /v1/traces
      route:
        - destination:
            host: tempo-distributor.observability.svc.cluster.local
            port:
              number: 4318
