tempo/virtualservices/tempo-querier-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tempo-querier-vs
  namespace: observability
spec:
  hosts:
    - testing-consumer-app.thirdwavecoffee.in
  gateways:
    - istio-system/testing-api-gateway
  http:
    - match:
        - uri:
            prefix: /api/traces
      route:
        - destination:
            host: tempo-querier.observability.svc.cluster.local
            port:
              number: 3100
